# celtic-magic-button

./: CelticMagicButtonApplet.plugin  CelticMagicButtonApplet.vala  DBusInterface.vala  README.md  meson.build  meson_options.txt  post-install.sh
